--- a/src/components/HomeStyles.css
+++ b/src/components/HomeStyles.css
@@ -1,15 +1,16 @@
 .hero{
     display:flex;
     flex-direction: column;
+    align-items: flex-start;
+    align-content: center;
     justify-content: center;
-    background: linear-gradient(0deg, rgba(45, 5, 82, 0.692), rgba(45, 5, 82, 0.3)), url("../assests/cehero.png") no-repeat;
+    background: linear-gradient(0deg, rgba(13, 1, 24, 0.692), rgba(45, 5, 82, 0.61)), url("../assests/cehero.png") no-repeat;
     background-size: cover;
     height: 100vh;
 }
 
 .hero__content{
     margin-left: 76px;
-    margin-top: -150px;
     text-transform: capitalize;
     font-style: normal;
     
@@ -45,24 +46,52 @@
     align-items: center;
     justify-content: center;
     background-color: #11214D;
-    margin: 25px;
+    margin-top: 30px;
+    margin-left: 10px;
     width: 139px;
     height: 38px;
     border: #11214D;
     border-radius: 5px;
 }
 
-.hero__content img{
-    width: 22px;
-    height: 22px;
-    margin-top: -2px;
-    margin-left: 5px;
-}
 
-.hero__content P {
+
+.hero button{
+    background-color: #11214D;
+    border: none;
     color: #fff;
-    font-size: 14px;    
+    font-weight: 700;
+    font-size: 14px;  
+    line-height: 21px;  
     text-transform: uppercase;
+    transition: all .6s ease-in-out;
+    cursor: pointer;
    
 }
+
+.hero button:hover{
+    background-color: #FBB000;
+    transform: scale(1.2);
+    color: #11214D;
+}
+
+
+.play{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 29px;
+    width: 29px;
+    background: #fff;
+    padding: 0;
+    margin-left: 5px;
+    border-radius: 50%;
+    border: none;
+}
+
+.play img{
+    width: 100%;
+    height: 100%;
+}
+
 
