--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -5,9 +5,10 @@
     justify-content: center;
     align-items: center;
     font-size: 1.2rem;
-    position: sticky;
+    position: fixed;
     top: 0;
     z-index: 999;
+    width:100vw;
 }
 
 .navbar__container{
@@ -28,7 +29,7 @@
 
 }
 
-img{
+.navbar .navbar__container img{
     width: 44px;
     height: 39px;
    margin-top: 18px;
