--- a/src/components/HomeStyles.css
+++ b/src/components/HomeStyles.css
@@ -1,97 +1,197 @@
-.hero{
-    display:flex;
-    flex-direction: column;
-    align-items: flex-start;
-    align-content: center;
-    justify-content: center;
-    background: linear-gradient(0deg, rgba(13, 1, 24, 0.692), rgba(45, 5, 82, 0.61)), url("../assests/cehero.png") no-repeat;
-    background-size: cover;
-    height: 100vh;
+.hero {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  align-content: center;
+  justify-content: center;
+  background: linear-gradient(
+      0deg,
+      rgba(13, 1, 24, 0.692),
+      rgba(45, 5, 82, 0.61)
+    ),
+    url("../assests/cehero.png") no-repeat;
+  background-size: cover;
+  height: 100vh;
 }
 
-.hero__content{
-    margin-left: 76px;
-    text-transform: capitalize;
-    font-style: normal;
-    
-
+.hero__content {
+  margin-left: 76px;
+  text-transform: capitalize;
+  font-style: normal;
 }
 
 #hero {
-    color: #FBB000;
-    display: block;
-    text-transform: uppercase;
-    font-weight: lighter;
-    font-size: 39px;
-    line-height: 0px;
-
+  color: #fbb000;
+  display: block;
+  text-transform: uppercase;
+  font-weight: lighter;
+  font-size: 39px;
+  line-height: 0px;
 }
 
-.hero__content h1{
-    color: #fff;
-    font-size: 57px;
-
+.hero__content h1 {
+  color: #fff;
+  font-size: 57px;
 }
 
 #hero1 {
-    display: block;
-    color: #fff;
-    font-size: 57px;
-    font-weight: 700px;
-    line-height: 20px;
+  display: block;
+  color: #fff;
+  font-size: 57px;
+  font-weight: 700px;
+  line-height: 20px;
 }
 
-.play__btn{
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #11214D;
-    margin-top: 30px;
-    margin-left: 10px;
-    width: 139px;
-    height: 38px;
-    border: #11214D;
-    border-radius: 5px;
+.play__btn {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #11214d;
+  margin-top: 30px;
+  margin-left: 10px;
+  width: 139px;
+  height: 38px;
+  border: #11214d;
+  border-radius: 5px;
 }
 
-
-
-.hero button{
-    background-color: #11214D;
-    border: none;
-    color: #fff;
-    font-weight: 700;
-    font-size: 14px;  
-    line-height: 21px;  
-    text-transform: uppercase;
-    transition: all .6s ease-in-out;
-    cursor: pointer;
-   
+.hero button {
+  background-color: #11214d;
+  border: none;
+  color: #fff;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 21px;
+  text-transform: uppercase;
+  transition: all 0.6s ease-in-out;
+  cursor: pointer;
 }
 
-.hero button:hover{
-    background-color: #FBB000;
-    transform: scale(1.2);
-    color: #11214D;
+.hero button:hover {
+  background-color: #fbb000;
+  transform: scale(1.2);
+  color: #11214d;
 }
 
-
-.play{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 29px;
-    width: 29px;
-    background: #fff;
-    padding: 0;
-    margin-left: 5px;
-    border-radius: 50%;
-    border: none;
+.play {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 29px;
+  width: 29px;
+  background: #fff;
+  padding: 0;
+  margin-left: 5px;
+  border-radius: 50%;
+  border: none;
 }
 
-.play img{
-    width: 100%;
-    height: 100%;
+.play img {
+  width: 100%;
+  height: 100%;
 }
 
+.learnmore {
+  height: 600px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
+.learnmore__img {
+  width: 500px;
+  display: flex;
+  position: relative;
+}
+
+.activeImage{
+  border: 3px solid #fbb000;
+  padding: 10px;
+  border-radius: 0px 30px 30px 0px;
+
+}
+
+.activeImage2{
+  border: 3px solid #fbb000;
+  padding: 10px;
+  border-radius: 30px 0px 0px 30px;
+
+}
+
+.imgp {
+  position: absolute;
+  top: 40px;
+  left: 100px;
+  transition: all 0.6s ease-in-out;
+}
+
+.imgc {
+  transition: all 0.6s ease-in-out;
+}
+
+.imgp img,
+.imgc img {
+  height: 250px;
+  width: 250px;
+}
+
+.imgp:hover,
+.imgc:hover {
+  transform: scale(1.1);
+  z-index: 10;
+}
+
+.vl {
+  border-left: 1px solid #d9d9d9;
+  height: 170px;
+  left: 50%;
+  margin-left: -3px;
+  top: 0;
+}
+
+.learnmore img {
+  width: 327px;
+  height: 291px;
+}
+
+.learnmore__text {
+  width: 500px;
+  margin-left: 50px;
+}
+
+.learnmore__text h3{
+  color:#FBB000;
+  font-weight: 700px;
+  font-size: 20px;
+  text-transform: uppercase;
+  line-height: 30px;
+}
+
+.learnmore__text h2{
+  font-weight: 600;
+  font-size: 35px;
+  line-height: 52px;
+  text-transform: capitalize;
+  color: #11214D
+}
+
+.learnmore__text p {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 21px;
+  text-align: justify;
+  text-transform: capitalize;
+}
+
+.learnmore__context{
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.learnmore__text button{
+  width: 115px;
+  height: 35px;
+  color: white;
+  background: #11214D;
+  border-radius: 8px;
+}
